# LFU-cache

./: .gitignore  CMakeLists.txt  README.md  belady_cache.cpp  cache.cpp  ideal_cache.cpp  lfu_cache.cpp
include/: belady_cache.hpp  cache.hpp  ideal_cache.hpp  lfu_cache.hpp
testing/: CMakeLists.txt  generating_test.py  graph_builder.sh  lfu_cache_gtest.cpp  main.cpp  make_graphs.py  tester.sh
testing/tests/: test_0.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test
